# ml_cn_project

./: README.md  README_NetFound.md  causal_results.json  hpc setup  requirements.txt  run_causal_sensitivity.py
ET-BERT/: command  preprocess.py
ET-BERT/data_process/: data_preprocess.py  dataset_cleanning.py  dataset_generation.py  main.py  open_dataset_deal.py
ET-BERT/pre-training/: pretrain.py
YaTC./: YATC_embeddings.ipynb  cosine_anisotropy.ipynb  eval_yatc.py  get_cic_flow.py  perturb_yatc.ipynb  preprocess_multithreaded.py
demystifying-networks-main/: .gitignore  LICENSE  README.md  Untitled.ipynb
demystifying-networks-main/data/: README.md
demystifying-networks-main/models/: README.md
demystifying-networks-main/src/: cicflowmeter.ipynb  cicflowmeter.py  cka.ipynb  cka.py  cosine_anisotropy.ipynb  cosine_anisotropy.py  flow_feature_alignment.py  generate_embeddings.py  intrinsic_evaluation.py  manifold_id_orig.py  math_embeddings.py  perturb_etbert.py  perturb_netfound.ipynb  perturb_netfound.py  perturb_netmamba.py  perturb_yatc.ipynb  perturb_yatc.py  run_evaluation.py  silhouette.ipynb  silhouette.py  stds.ipynb  stds.py  synthstability.ipynb  synthstability.py  whitening.ipynb  whitening.py
netFound-main/: Dockerfile  Makefile  README.md  requirements.txt
netFound-main/pre_process_src/packets_processing_src/: CMakeLists.txt  README.md
netFound-main/pre_process_src/packets_processing_src/1_filter/: 1_filter.cpp
netFound-main/pre_process_src/packets_processing_src/3_field_extraction/: 3_field_extraction.cpp
netFound-main/tests/: conftest.py  (+5 more)
(+57 files in other folders)
